--- a/Templates/faq.html
+++ b/Templates/faq.html
@@ -85,6 +85,10 @@
                 </div>
 
             </div>
+
+            
+              <img src="{{url_for('static', filename='Images/Animation_tall.png')}}" alt="child-short" class="image-container">
+           
         </div>
         
         
