--- a/Templates/testcalgpa.html
+++ b/Templates/testcalgpa.html
@@ -185,7 +185,7 @@ function checkItemAvailability(itemId) { //check rows availability. prevent from
 
                    
                 <p name="degree" class="selected_degree"><span class="txt">
-                    Selected Digree Program :</span> {{ degree[0][0] }}
+                    Selected Digree Program :</span> {{ degree[0][1] }}
                 </p>
 
             
@@ -426,12 +426,41 @@ function checkItemAvailability(itemId) { //check rows availability. prevent from
             Discover Jobs Aligned with Your GPA<br>
             Start Your Career Journey Now!
           </p>
-          <div class="job_explore">
+          <div class="job_explore" >
             
-            <button class="job_explore_btn">  
+
+
+          {% if 'username' in session %}
+            <button class="job_explore_btn" onclick="findJob()">  
               
-             <span class="txt">Explore Jobs</span> 
-          </button>
+                <span class="txt">Explore Jobs</span> 
+            </button>
+            {% else %}
+            <button class="job_explore_btn" disabled>  
+              
+                <span class="txt">Explore Jobs</span> 
+                (Sign Up required)
+            </button>
+            
+            {% endif %}
+
+
+
+
+        <script>
+            function findJob() {
+
+                var gpa = document.getElementById('finalGpa').innerText;
+                if(gpa>0.1){
+                    window.location.href = '/jobs?id={{ degree[0][0] }}&gpa='+gpa;
+
+                }else{
+                    alert("minimum GPA value is 0.2");
+                }
+                
+        }
+
+        </script>
           
           </div>
         </section>
