--- a/static/CSS/faq.css
+++ b/static/CSS/faq.css
@@ -18,7 +18,7 @@ margin-left: 15px;
     display: flex;
     flex-direction: row;
     margin-top: 50px;
-    justify-content: space-around;
+    justify-content: center;
     }
 .column-dev{
     display: flex;
@@ -72,4 +72,10 @@ details[open] summary::before{
   
   details[open] div{
     padding: 5px;
+}
+.image-container {
+    width: 15%;
+    height: 10%;
+    box-sizing: border-box;
+    margin-top: 20%;
   }
