--- a/Templates/jobs.html
+++ b/Templates/jobs.html
@@ -63,6 +63,7 @@
                   document.getElementById("cont").innerHTML=`${data}`;
             
               </script>
+              <span class="dis-head">*this content generated using gemini AI model</span>
             </div>
         </div>
             
