--- a/Templates/footer.html
+++ b/Templates/footer.html
@@ -2,7 +2,7 @@
     <footer id="bottom" class="w-100">
         <div class="footer">
         <div class="footer-section flex-grow-1 mb-3">
-            <a class="brand-text" href="index.html"
+            <a class="brand-text" href="{{url_for('index')}}"
             ><img
                 class="img-logo"
                 src="{{url_for('static', filename='Images/Logo_light.png')}}"
