--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,19 +1,74 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/main.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/Home.css') }}">
+    <!-- Bootstrap CSS - CDN -->
+    <link
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
+          rel="stylesheet" 
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
+          crossorigin="anonymous">
+    <title>NSBM</title>
+</head>
+<body>
+    <div class="main-wrapper">
+    <!-- nav bar start -->
+    <header>
+      {% include 'nav.html' %}
+    </header>
 
 {% block content %}
-
+    <!-- hero section start -->
+   
     
-    <form action="/calgpa" method="post">
-        <label for="degree">Choose a Degree Program:</label>
-        <select id="degree" name="degree">
-            {% for program in data %}
-                <option value="{{ program[0] }}">{{ program[1] }}</option>
-            {% endfor %}
-        </select>
-        <br>
+      <!-- Your code Start here -->
+      <div class="container">
+        <header>
+            <h1 class="main-heading">Calculate Your GPA</h1>
+            <h3 class="sub-heading">
+              Unlock Your Academic Potential with
+              <span class="style_1">
+               GPA.
+              </span> 
+              <span class="style_2">
+               Connect 
+              </span>
+              <span class="style_3">
+                <br>
+              Your Gateway to Educational Success and Career Opportunities!
+              </span>
+            </h3>
+        </header>
+    
+        <div class="home-content">
+          <form action="/calgpa" method="post">
+            <div class="course-row">
+                    
+                    {% for program in data %}
+                        <button type="submit" name="degree" value="{{ program[0] }}">{{ program[1] }}</button>
+                    {% endfor %}
+            </div>
+          </form>
+        </div>
+      </div>
 
-        <input type="submit" value="Submit">
-    </form>
+      <!-- Your code Start here -->
+    
+    <!-- hero section end -->
+    {% endblock %}
 
-
-{% endblock %}
+    {% include 'footer.html' %}
+        
+    <!-- footer end -->
+  </div>
+      <!-- Bootstrap JS - CDN -->
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
+        integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
+        crossorigin="anonymous">
+      </script>
+  </body>
+  </html>
