--- a/Templates/nav.html
+++ b/Templates/nav.html
@@ -1,6 +1,6 @@
     <nav class="navbar navbar-expand-lg fixed-top w-full bg-body-tertiary">
         <div class="container-fluid px-lg-4">
-          <a class="navbar-brand" href="#"
+          <a class="navbar-brand" href="{{url_for('index')}}"
             ><img
               class="img-logo"
               src="{{url_for('static', filename='Images/Logo.png')}}"
