--- a/static/CSS/aboutus.css
+++ b/static/CSS/aboutus.css
@@ -14,20 +14,10 @@ font-size: small;
 box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.3);
 border-radius: 10px;
 padding: 8px;
-margin: 45px ;
+margin: 10px ;
 
 }
-.row-dev{
-display: flex;
-flex-direction: row;
-justify-content: space-around;
-}
-.column-dev{
-display: flex;
-flex-direction: column;
-justify-content: space-around;
-overflow: hidden;
-}
+
 
 .circular-image:hover{
     transform: scale(1.01);
@@ -35,8 +25,9 @@ overflow: hidden;
 .img{
     margin: 20px;
     box-sizing: border-box;
-    width: 20%;
-    border-radius: 20px;
+    width: 10%;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.3);
   }
 .space{
     margin-top: 50px;
@@ -44,11 +35,11 @@ overflow: hidden;
 
 
 .circular-image {
-    width: 120px;
-    height: 120px;
+    width: 110px;
+    height: 110px;
     border-radius: 50%;
     overflow: hidden;
-    margin: 20px auto;
+    margin: 15px auto;
     transition: 300ms;
 }
 
@@ -73,8 +64,8 @@ overflow: hidden;
     align-items: center;
 }
 .description .image-section img {
-    width: 90%;
-    height: 100%;
+    width: 80%;
+    display: block;
     border-radius: 0.5rem;
 }
 .description .description-section p {
@@ -88,6 +79,7 @@ overflow: hidden;
     text-align: center;
     
 }
+
 .social{
     width: 30px;
     margin-left: 5px;
