about us changed

--- a/Templates/aboutus.html
+++ b/Templates/aboutus.html
@@ -82,7 +82,7 @@
                         </div>
                         <div class="social-align">
                             <a href="https://www.linkedin.com/in/pasindu-nanayakkara-94867424b/" target="_blank"><img src="{{url_for('static', filename='Images/linkedin.png')}}" alt="linkedin" class="social"></a>
-                            <a href="#" target="_blank"><img src="{{url_for('static', filename='Images/github.png')}}" alt="github" class="social"></a>
+                            <a href="https://github.com/pasindunana2002" target="_blank"><img src="{{url_for('static', filename='Images/github.png')}}" alt="github" class="social"></a>
                     </div>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                     <div class="col-lg">
                         <div class="card-dev">
                             <div class="circular-image">
-                                <img src="{{url_for('static', filename='Images/icon-women.png')}}" alt="image">
+                                <img src="https://media.licdn.com/dms/image/D5603AQGEe9FNiaULAQ/profile-displayphoto-shrink_400_400/0/1706684371472?e=1712188800&v=beta&t=jdjjfxBjgRfKRfN6XnkzWuh_c_cJm6k338OKUl8eKhU" alt="image">
                             </div>
                             <div class="column-dev">
                                  
@@ -137,8 +137,8 @@
                                     </ul>  
                                 </div>
                                 <div class="social-align">
-                                    <a href="#" target="_blank"><img src="{{url_for('static', filename='Images/linkedin.png')}}" alt="linkedin" class="social"></a>
-                                    <a href="#" target="_blank"><img src="{{url_for('static', filename='Images/github.png')}}" alt="github" class="social"></a>
+                                    <a href="https://www.linkedin.com/in/vishmini-ridmika-80705227b/" target="_blank"><img src="{{url_for('static', filename='Images/linkedin.png')}}" alt="linkedin" class="social"></a>
+                                    <a href="https://github.com/RidmiWijethunga" target="_blank"><img src="{{url_for('static', filename='Images/github.png')}}" alt="github" class="social"></a>
                             </div>
                             </div>
                         </div>
@@ -168,7 +168,7 @@
                                 </div>
                                 <div class="social-align">
                                     <a href="https://www.linkedin.com/in/nipun-jayawardhana-4b8997247/" target="_blank"><img src="{{url_for('static', filename='Images/linkedin.png')}}" alt="linkedin" class="social"></a>
-                                    <a href="#" target="_blank"><img src="{{url_for('static', filename='Images/github.png')}}" alt="github" class="social"></a>
+                                    <a href="https://github.com/nipun-jayawardhana" target="_blank"><img src="{{url_for('static', filename='Images/github.png')}}" alt="github" class="social"></a>
                             </div>
                             </div>
                         </div>
@@ -196,7 +196,7 @@
                                 </div>
                                 <div class="social-align">
                                     <a href="https://www.linkedin.com/in/jayani-adikari-a9aa31291/" target="_blank"><img src="{{url_for('static', filename='Images/linkedin.png')}}" alt="linkedin" class="social"></a>
-                                    <a href="#" target="_blank"><img src="{{url_for('static', filename='Images/github.png')}}" alt="github" class="social"></a>
+                                    <a href="https://github.com/JMAdikari" target="_blank"><img src="{{url_for('static', filename='Images/github.png')}}" alt="github" class="social"></a>
                             </div>
                             </div>
                         </div>
@@ -224,7 +224,7 @@
                                 </div>
                                 <div class="social-align">
                                     <a href="#" target="_blank"><img src="{{url_for('static', filename='Images/linkedin.png')}}" alt="linkedin" class="social"></a>
-                                    <a href="#" target="_blank"><img src="{{url_for('static', filename='Images/github.png')}}" alt="github" class="social"></a>
+                                    <a href="https://github.com/lwxDbrhkgd" target="_blank"><img src="{{url_for('static', filename='Images/github.png')}}" alt="github" class="social"></a>
                             </div>
                             </div>
                         </div>
@@ -252,7 +252,7 @@
                                 </div>
                                 <div class="social-align">
                                     <a href="https://www.linkedin.com/in/rasil-laksika-kottagoda-749516255/" target="_blank"><img src="{{url_for('static', filename='Images/linkedin.png')}}" alt="linkedin" class="social"></a>
-                                    <a href="#" target="_blank"><img src="{{url_for('static', filename='Images/github.png')}}" alt="github" class="social"></a>
+                                    <a href="https://github.com/KDRLaksika" target="_blank"><img src="{{url_for('static', filename='Images/github.png')}}" alt="github" class="social"></a>
                             </div>
                             </div>
                         </div>
