about us updated

--- a/Templates/aboutus.html
+++ b/Templates/aboutus.html
@@ -204,7 +204,7 @@
                     <div class="col-lg">
                         <div class="card-dev">
                             <div class="circular-image">
-                                <img src="{{url_for('static', filename='Images/icon-women.png')}}" alt="image">
+                                <img src="https://media.licdn.com/dms/image/D5603AQEPJmqQBtG7SQ/profile-displayphoto-shrink_800_800/0/1706607207579?e=1712188800&v=beta&t=EYI3q7_idtimvzopTT_LT8rDGzVWFwmOeVDZqaTOj-8" alt="image">
                             </div>
                             <div class="column-dev">
                                 
@@ -223,7 +223,7 @@
                                     </ul>  
                                 </div>
                                 <div class="social-align">
-                                    <a href="#" target="_blank"><img src="{{url_for('static', filename='Images/linkedin.png')}}" alt="linkedin" class="social"></a>
+                                    <a href="https://www.linkedin.com/in/ayodhya-j-weerabahu/" target="_blank"><img src="{{url_for('static', filename='Images/linkedin.png')}}" alt="linkedin" class="social"></a>
                                     <a href="https://github.com/lwxDbrhkgd" target="_blank"><img src="{{url_for('static', filename='Images/github.png')}}" alt="github" class="social"></a>
                             </div>
                             </div>
